# Oncolytica

./: .gitignore
engine/: .gitignore  (+1 more)
framework/: pyproject.toml
framework/examples/: exp2.py  expirements.py  gbm_model.py  shader.wgsl
framework/src/oncolytica/: __init__.py
framework/src/oncolytica/core/: _engine.py  _errors.py  _geometry.py  _math.py  _simulation.py  _types.py  _validator.py
framework/src/oncolytica/core/runtime/: _backend.py  _engine.py  _geometry.py
framework/src/oncolytica/core/utils/: _config.py  _containers.py  _errors.py  _math.py  _types.py
framework/src/oncolytica/core/validation/: _base.py  _call_graph.py  _context.py  _domain.py  _syntax.py  _type_checker.py  _validator.py
framework/src/oncolytica/cpu/: _containers.py  _cpu_backend.py  _decorators.py
framework/src/oncolytica/gpu/: _ast_passes.py  _codegen.py  _compiler.py  _device_manager.py  _gpu_backend.py  _memory.py  _shader_builder.py  _type_system.py  template.wgsl
framework/src/oncolytica/gpu/compiler/: _compiler.py  _shader_builder.py  _type_system.py  template.wgsl
framework/src/oncolytica/gpu/compiler/translator/: _constants.py  _context.py  _expr_translator.py  _stmt_translator.py
framework/src/oncolytica/gpu/runtime/: _device_manager.py  _gpu_backend.py  _memory.py
framework/tests/: debug_shader.wgsl  launch_config.json  shader.wgsl  test_ctx_bugs.py  test_domain.py  test_gpu.py  test_methods.py  test_mutability.py  test_oncolytica.py  test_return.py  test_simulation_params.py  test_tuple.py  test_type_checker.py  test_validator.py  test_vector.py
(+27 files in other folders)
