[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oncolytica"
version = "0.0.1"
description = "Hybrid Agent-Based Modeling framework for biology"
authors = [{name = "Your Name", email = "your@email.com"}]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/oncolytica"

[project.optional-dependencies]
gpu = [
    "wgpu>=0.10.0",
]
dev = [
    "pytest",
    "black",
    "isort",
]

[project.gui-scripts]
# (опционально, если нужны CLI утилиты)